EmissionFactorMatching/objects/NZC_EmissionsMatchingCustomMatch__mdt.object
<CustomObject>
    <description>Used to match emissions sets based on criteria besides year</description>
    <fields>
        <fullName>EmissionsSetFieldToMatch__c</fullName>
        <description>What field on the emissions set should we match to?</description>
        <inlineHelpText>What field on the emissions set should we match to?</inlineHelpText>
        <label>Emissions Set Field To Match</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnergyUseFieldToMatch__c</fullName>
        <description>the name of the energy use field that should be matched</description>
        <inlineHelpText>the name of the energy use field that should be matched</inlineHelpText>
        <label>Energy Use Field To Match</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FuelType__c</fullName>
        <description>What type of fuel does this apply for?</description>
        <inlineHelpText>What type of fuel does this apply for?</inlineHelpText>
        <label>Fuel Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAppliesTo__c</fullName>
        <description>what object does this rule apply to?</description>
        <inlineHelpText>what object does this rule apply to?</inlineHelpText>
        <label>Object Applies To</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NZC Emissions Matching Custom Match</label>
    <listViews>
        <fullName>All_Records_with_All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>ObjectAppliesTo__c</columns>
        <columns>FuelType__c</columns>
        <columns>EmissionsSetFieldToMatch__c</columns>
        <columns>EnergyUseFieldToMatch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records All Fields</label>
    </listViews>
    <pluralLabel>NZC Emissions Matching Custom Matches</pluralLabel>
</CustomObject>